# CPP-Playground

./: CMakeLists.txt  CMakePresets.json  README.md
ArrayList/: CMakeLists.txt  README.md
ArrayList/src/: list.hpp  main.cpp
SimpleCalculator/: CMakeLists.txt
SimpleCalculator/src/: actions.cpp  actions.hpp  errors.cpp  errors.hpp  operations.cpp  operations.hpp  utils.cpp
src/: actions.cpp  errors.cpp  errors.hpp  main.cpp  operations.cpp  operations.hpp  utils.cpp  utils.hpp
